# EveHelper

./: .gitignore  Cargo.toml  EveHelper.sln  LICENSE  PRD.txt  README.md  devcontainer.json  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.taskmaster/: config.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  tasks.json
EveHelper.App/: App.xaml  App.xaml.cs  EveHelper.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  Startup.cs
EveHelper.App/Commands/: RelayCommand.cs
EveHelper.App/Converters/: BooleanToVisibilityConverter.cs  InverseBooleanToVisibilityConverter.cs
EveHelper.App/Extensions/: ServiceCollectionExtensions.cs
EveHelper.App/Services/: NavigationService.cs
EveHelper.App/Styles/: CommonStyles.xaml
EveHelper.App/ViewModels/: CharacterSelectionViewModel.cs  HomeViewModel.cs  ViewModelLocator.cs
EveHelper.App/Views/: CharacterSelectionView.xaml  CharacterSelectionView.xaml.cs  HomeView.xaml  HomeView.xaml.cs
EveHelper.Core/: Class1.cs
EveHelper.Data/: Class1.cs  EveHelper.Data.csproj
EveHelper.Services/: Class1.cs  DependencyInjection.cs  EveHelper.Services.csproj
eveonline-helper/: README.md  eslint.config.cjs  jest.config.cjs  jest.config.js  package.json  pnpm-lock.yaml
scripts/: PRD.txt
tasks/: .keep  prd-ship-fitting-recommendation-app.md  tasks-prd-ship-fitting-recommendation-app.md
(+68 files in other folders)
